Added prototypes and writeups

--- a/about.html
+++ b/about.html
@@ -30,8 +30,6 @@
 
 <body class="" data-js-loaded="true" style="">
 
-
-
   <div id="SITE_CONTAINER">
     <style type="text/css" data-styleid="uploadedFonts"></style>
 
@@ -90,12 +88,12 @@
                               </div>
                               <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                                 <h6 class="font_6" style="line-height:1.5em;">
-                                  and a paragraph explaining why you chose this dataset.
-                                  For example, is the topic a passion of yours? Does it have personal significance? Were you inspired by something? This is different from the overall narrative, which often describes what you are trying to
-                                  learn from this dataset instead of why you chose this dataset in the first place.
+                                  The datasets topic is cinematography. I am passionate about movies, always has been a cinematography geek. I started making my own short movies years ago and participated in some competitions.
+                                  Since childhood, I was very into the whole industry, on one of the competitions I won the first place as a director of the short movie and got good recommendations fro0m a famous screenwriter.
+                                  I am very curios in CS in cinematography as well.
                                 </h6>
                               </div>
-                              <div id="comp-ividcu8s" data-align="left" data-disabled="false" data-margin="0" data-should-use-flex="true" data-width="217" data-height="40" style="height: 40px; min-height: 30px; width: 217px;" class="style-ivko0jau"
+                              <div id="comp-ividcu8s" data-align="left" data-disabled="false" data-margin="0" data-should-use-flex="true" data-width="217" data-height="20" style="height: 10px; min-height: 10px; width: 217px;" class="style-ivko0jau"
                                 data-state="desktop shouldUseFlex left">
                                 <a href="data.html" target="_self" id="comp-ividcu8slink" class="style-ivko0jaulink">
                                   <span style="margin-left:0" id="comp-ividcu8slabel" class="font_6">
@@ -192,20 +190,20 @@
                   </div>
                 </a></li>
               <li data-direction="ltr" data-listposition="right" data-data-id="dataItem-ivhzdnii" class="ddm1repeaterButton" data-state="menu  idle link notMobile" id="comp-ivgjuufw2" data-original-gap-between-text-and-btn="10" aria-hidden="false"
-                style="width: 113px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;"><a data-listposition="right" aria-haspopup="false" href="prototype.html" target="_self" data-keep-roots="true" data-anchor-comp-id=""
+                style="width: 130px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;"><a data-listposition="right" aria-haspopup="false" href="locations.html" target="_self" data-keep-roots="true" data-anchor-comp-id=""
                   data-anchor="dataItem-ividcu8d" id="comp-ivgjuufw2linkElement" class="ddm1repeaterButtonlinkElement">
                   <div class="ddm1repeaterButton_gapper">
                     <div style="text-align:right" id="comp-ivgjuufw2bg" class="ddm1repeaterButtonbg">
-                      <p style="text-align: right; line-height: 30px;" id="comp-ivgjuufw2label" class="ddm1repeaterButtonlabel">P R O T O T Y P E</p>
+                      <p style="text-align: right; line-height: 30px;" id="comp-ivgjuufw2label" class="ddm1repeaterButtonlabel">L O C A T I O N &nbsp; M A P</p>
                     </div>
                   </div>
                 </a></li>
               <li data-direction="ltr" data-listposition="right" data-data-id="dataItem-ivhzdnii" class="ddm1repeaterButton" data-state="menu  idle link notMobile" id="comp-ivgjuufw2" data-original-gap-between-text-and-btn="10" aria-hidden="false"
-                style="width: 113px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;"><a data-listposition="right" aria-haspopup="false" href="visual.html" target="_self" data-keep-roots="true" data-anchor-comp-id=""
+                style="width: 130px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;"><a data-listposition="right" aria-haspopup="false" href="ratings.html" target="_self" data-keep-roots="true" data-anchor-comp-id=""
                   data-anchor="dataItem-ividcu8d" id="comp-ivgjuufw2linkElement" class="ddm1repeaterButtonlinkElement">
                   <div class="ddm1repeaterButton_gapper">
                     <div style="text-align:right" id="comp-ivgjuufw2bg" class="ddm1repeaterButtonbg">
-                      <p style="text-align: right; line-height: 30px;" id="comp-ivgjuufw2label" class="ddm1repeaterButtonlabel">V I S U A L</p>
+                      <p style="text-align: right; line-height: 30px;" id="comp-ivgjuufw2label" class="ddm1repeaterButtonlabel">R A T I N G S</p>
                     </div>
                   </div>
                 </a></li>
@@ -238,7 +236,7 @@
             </div>
           </a></div>
         <div id="comp-ivhrfpvn" data-align="left" data-disabled="false" data-margin="0" data-should-use-flex="true" data-width="224" data-height="40" style="z-index: 50; height: 40px; min-height: 18px; width: 224px;" class="b3"
-          data-state="desktop shouldUseFlex left"><a href="https://betlakes.wixsite.com/mysite-1" target="_self" id="comp-ivhrfpvnlink" class="b3link"><span style="margin-left:0" id="comp-ivhrfpvnlabel" class="b3label">B E T T Y</span></a></div>
+          data-state="desktop shouldUseFlex left"><a href="index.html" target="_self" id="comp-ivhrfpvnlink" class="b3link"><span style="margin-left:0" id="comp-ivhrfpvnlabel" class="b3label">B E T T Y</span></a></div>
       </div>
     </div>
   </div>
