--- a/index.html
+++ b/index.html
@@ -80,12 +80,13 @@
                             <div id="comp-ividcu8kinlineContent-gridWrapper" data-mesh-internal="true">
                               <div id="comp-ividcu8kinlineContent-gridContainer" data-mesh-internal="true">
                                 <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
-                                  <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Data Table</span></h2>
+                                  <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Narrative</span></h2>
                                 </div>
                                 <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                                   <h6 class="font_6" style="line-height:1.5em;">
-                                    This should be a separate page that describes the original dataset. It should include the dataset attribution (including link to the source and date accessed), the license for the dataset, the size of the
-                                    dataset (including number of rows, columns, file size, or estimate where appropriate), and the content of the dataset listing all relevant columns and their descriptions.
+                                    Visualizations will include interesting views on cinematography datasets.
+                                    The overall narrative, goal, story, or theme includes what you hoped to learn by visualizing this dataset.
+                                    Each visualization might have its own individual goal, but it must be relevant to the overall narrative stated here.
                                   </h6>
                                 </div>
                               </div>
@@ -196,7 +197,7 @@
                                   </style>
                                   <div id="comp-ividcu4cinlineContent-gridWrapper" data-mesh-internal="true">
                                     <div id="comp-ividcu4cinlineContent-gridContainer" data-mesh-internal="true">
-                                      <div style="width: 85px; height: 85px;" class="ImageButton_1" data-state="supports_opacity transition_none prepare_hda  " id="comp-ivjv7a3o"><a href="prototype.html" target="_self"
+                                      <div style="width: 85px; height: 85px;" class="ImageButton_1" data-state="supports_opacity transition_none prepare_hda  " id="comp-ivjv7a3o"><a href="locations.html" target="_self"
                                           data-keep-roots="true" data-anchor-comp-id="" data-anchor="dataItem-ividcu621" title="" style="width:85px;height:85px" id="comp-ivjv7a3olink" class="ImageButton_1link">
                                           <div class="ImageButton_1_correct-positioning">
                                             <wix-image style="width:85px;height:85px;top:0;left:0" data-has-bg-scroll-effect=""
@@ -226,11 +227,11 @@
 
                                       <div data-packed="true" style="width: 200px; pointer-events: none;" class="txtNew" id="comp-ividcu4p">
                                         <p class="font_7" style="line-height:1.5em; text-align:center;"><span style="font-family:avenir-lt-w01_85-heavy1475544,sans-serif;"><span style="letter-spacing:0.05em;"><span class="color_11"><a
-                                                  href="prototype.html" target="_self" data-anchor="dataItem-ividcu621">Prototypes</a></span></span></span></p>
+                                                  href="locations.html" target="_self" data-anchor="dataItem-ividcu621">Location Map</a></span></span></span></p>
                                       </div>
                                       <div data-packed="true" style="width: 200px; pointer-events: none;" class="txtNew" id="comp-ividcu4u">
                                         <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="https://betlakes.wixsite.com/mysite-1" target="_self"
-                                                data-anchor="dataItem-ividcu621">Page that includes various prototypes.</a></span></span></p>
+                                                data-anchor="dataItem-ividcu621">Page that includes location map visualization.</a></span></span></p>
                                       </div>
                                     </div>
                                   </div>
@@ -242,7 +243,7 @@
                                   </style>
                                   <div id="comp-ividcu4cinlineContent-gridWrapper" data-mesh-internal="true">
                                     <div id="comp-ividcu4cinlineContent-gridContainer" data-mesh-internal="true">
-                                      <div style="width: 85px; height: 85px;" class="ImageButton_1" data-state="supports_opacity transition_none prepare_hda  " id="comp-ivjv7a3o"><a href="visual.html" target="_self"
+                                      <div style="width: 85px; height: 85px;" class="ImageButton_1" data-state="supports_opacity transition_none prepare_hda  " id="comp-ivjv7a3o"><a href="ratings.html" target="_self"
                                           data-keep-roots="true" data-anchor-comp-id="" data-anchor="dataItem-ividcu621" title="" style="width:85px;height:85px" id="comp-ivjv7a3olink" class="ImageButton_1link">
                                           <div class="ImageButton_1_correct-positioning">
                                             <wix-image style="width:85px;height:85px;top:0;left:0" data-has-bg-scroll-effect=""
@@ -272,11 +273,11 @@
 
                                       <div data-packed="true" style="width: 200px; pointer-events: none;" class="txtNew" id="comp-ividcu4p">
                                         <p class="font_7" style="line-height:1.5em; text-align:center;"><span style="font-family:avenir-lt-w01_85-heavy1475544,sans-serif;"><span style="letter-spacing:0.05em;"><span class="color_11"><a
-                                                  href="visual.html" target="_self" data-anchor="dataItem-ividcu621">Visualizations</a></span></span></span></p>
+                                                  href="ratings.html" target="_self" data-anchor="dataItem-ividcu621">Ratings</a></span></span></span></p>
                                       </div>
                                       <div data-packed="true" style="width: 200px; pointer-events: none;" class="txtNew" id="comp-ividcu4u">
-                                        <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="visual.html" target="_self"
-                                                data-anchor="dataItem-ividcu621">Page that includes d3 visualizations.</a></span></span></p>
+                                        <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="ratings.html" target="_self"
+                                                data-anchor="dataItem-ividcu621">Page that includes ratings visualization.</a></span></span></p>
                                       </div>
                                     </div>
                                   </div>
@@ -375,20 +376,20 @@
                       </div>
                     </a></li>
                   <li data-direction="ltr" data-listposition="right" data-data-id="dataItem-ivhzdnii" class="ddm1repeaterButton" data-state="menu  idle link notMobile" id="comp-ivgjuufw2" data-original-gap-between-text-and-btn="10"
-                    aria-hidden="false" style="width: 113px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;"><a data-listposition="right" aria-haspopup="false" href="prototype.html" target="_self" data-keep-roots="true"
+                    aria-hidden="false" style="width: 130px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;"><a data-listposition="right" aria-haspopup="false" href="locations.html" target="_self" data-keep-roots="true"
                       data-anchor-comp-id="" data-anchor="dataItem-ividcu8d" id="comp-ivgjuufw2linkElement" class="ddm1repeaterButtonlinkElement">
                       <div class="ddm1repeaterButton_gapper">
                         <div style="text-align:right" id="comp-ivgjuufw2bg" class="ddm1repeaterButtonbg">
-                          <p style="text-align: right; line-height: 30px;" id="comp-ivgjuufw2label" class="ddm1repeaterButtonlabel">P R O T O T Y P E</p>
+                          <p style="text-align: right; line-height: 30px;" id="comp-ivgjuufw2label" class="ddm1repeaterButtonlabel">L O C A T I O N &nbsp; M A P</p>
                         </div>
                       </div>
                     </a></li>
                   <li data-direction="ltr" data-listposition="right" data-data-id="dataItem-ivhzdnii" class="ddm1repeaterButton" data-state="menu  idle link notMobile" id="comp-ivgjuufw2" data-original-gap-between-text-and-btn="10"
-                    aria-hidden="false" style="width: 113px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;"><a data-listposition="right" aria-haspopup="false" href="visual.html" target="_self" data-keep-roots="true"
+                    aria-hidden="false" style="width: 130px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;"><a data-listposition="right" aria-haspopup="false" href="ratings.html" target="_self" data-keep-roots="true"
                       data-anchor-comp-id="" data-anchor="dataItem-ividcu8d" id="comp-ivgjuufw2linkElement" class="ddm1repeaterButtonlinkElement">
                       <div class="ddm1repeaterButton_gapper">
                         <div style="text-align:right" id="comp-ivgjuufw2bg" class="ddm1repeaterButtonbg">
-                          <p style="text-align: right; line-height: 30px;" id="comp-ivgjuufw2label" class="ddm1repeaterButtonlabel">V I S U A L</p>
+                          <p style="text-align: right; line-height: 30px;" id="comp-ivgjuufw2label" class="ddm1repeaterButtonlabel">R A T I N G S</p>
                         </div>
                       </div>
                     </a></li>
@@ -421,7 +422,7 @@
                 </div>
               </a></div>
             <div id="comp-ivhrfpvn" data-align="left" data-disabled="false" data-margin="0" data-should-use-flex="true" data-width="224" data-height="40" style="z-index: 50; height: 40px; min-height: 18px; width: 224px;" class="b3"
-              data-state="desktop shouldUseFlex left"><a href="https://betlakes.wixsite.com/mysite-1" target="_self" id="comp-ivhrfpvnlink" class="b3link"><span style="margin-left:0" id="comp-ivhrfpvnlabel" class="b3label">B E T T Y</span></a></div>
+              data-state="desktop shouldUseFlex left"><a href="index.html" target="_self" id="comp-ivhrfpvnlink" class="b3link"><span style="margin-left:0" id="comp-ivhrfpvnlabel" class="b3label">B E T T Y</span></a></div>
           </div>
         </div>
       </div>
